# celestial-rs

./: Cargo.toml  README.md  build.rs
.github/workflows/: build.yaml
locales/: v2.yml
src/: api.rs  consts.rs  environment.rs  error.rs  gui.rs  hashing.rs  launch.rs  lib.rs  local.rs  main.rs  utils.rs
src/api/: launch.rs  remote.rs
src/api/remote/: client.rs
src/api/remote/client/: apollo_api.rs  core.rs  deploy_api.rs  discord_api.rs  fabric_api.rs  forge_api.rs  game_api.rs  hosted_world_api.rs  index_api.rs  internal_api.rs  launcher_api.rs  live_experience_api.rs  neoforge_api.rs  og_api.rs  optifine_api.rs  pics_api.rs  quilt_api.rs  site_api.rs  store_api.rs  streamelements_api.rs  styngr_api.rs  twitter_api.rs  webstore_api.rs  wrapped_api.rs
src/api/remote/models/: ad.rs  delete_store_basket_basket_ident_omnibox_remove_omni_method_request.rs  delete_store_basket_basket_ident_omnibox_remove_omni_method_response.rs  feature_flag.rs  get_apollo_updates_response.rs  get_apollo_updates_response_assets.rs  get_discord_potw_get_cosmetic_pool_response.rs  get_discord_potw_get_cosmetic_pool_response_cosmetics_item.rs  get_game_metadata_response.rs  get_game_metadata_response_alert.rs  get_game_metadata_response_alert_active.rs  get_game_metadata_response_blog_posts_item.rs  get_game_metadata_response_lang_override.rs  get_game_metadata_response_links.rs  get_game_store_response.rs  (+345 more)
src/gui/: component.rs
src/gui/component/: main_window.rs  page.rs
src/launch/: download.rs  local.rs
src/utils/: hashing.rs  stream.rs  tempfile_async.rs  timestamp.rs
(+5 files in other folders)
