[package]
name = "celestial-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10"
egui = "0.32"
eframe = { version = "0.32", default-features = false, features = [
  "accesskit",
  "default_fonts",
  "glow",
  "persistence",
  "wayland",
  "x11",
] }
egui_router = "0.5"
egui_inbox = "0.9"
rust-i18n = "3"
log = "0.4.27"
chrono = "0.4"
env_logger = "0.11"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.46", features = [
  "rt",
  "rt-multi-thread",
  "fs",
  "macros",
] }
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1.0"
open = "5.3"
uuid = { version = "1.17", features = ["v4"] }
md5 = "0.8"
sha2 = "0.10"
sha1 = "0.10"
async-trait = "0.1"
mockall = "0.13"

[dev-dependencies]
tempfile = "3.20"
mockito = "1.7"

[build-dependencies]
git2 = "0.20"

[package.metadata.i18n]
available-locales = ["en"]
default-locale = "en"
